Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7782

[REG] audiodevices example: no devices available

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.6.2
    • 4.6.2
    • Multimedia
    • None

      On Windows, the audiodevices example does not list any devices.

      This is a regression from Qt 4.6.1.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            korbatit Kurt Korbatits (closed Nokia identity) (Inactive)
            sthomass Stian Sandvik Thomassen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes