audiodevices example: no devices available audio-backend option was not being written out to qconfig.pri

Task-number:QTBUG-7782
Reviewed-by:Justin McPherson
(cherry picked from commit 65493e69454f8914d0ae1607e5a071ea07bb7017)